проект путешествие версия 1.3 +ссылка на проект

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <header class="header page__header">
       <img class="header__logo" alt="логотип Россия" src="images/sprint-3-images/header-logo.svg">
-      <ul class="header__langs">
-        <li><a class="header__lang-link header_lang_ru" target="_blank" href="#">Ru</a></li>
-        <li><a class="header__lang-link" target="_blank" href="#">En</a></li>
-      </ul>
+      <div class="header__langs">
+        <a class="header__lang-link header_lang_ru" target="_blank" href="#">Ru</a>
+        <a class="header__lang-link" target="_blank" href="#">En</a>
+      </div>
     </header>
 
 
