проект путешествие версия 1.4 +ссылка на проект

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header page__header">
       <img class="header__logo" alt="логотип Россия" src="images/sprint-3-images/header-logo.svg">
       <div class="header__langs">
-        <a class="header__lang-link header_lang_ru" target="_blank" href="#">Ru</a>
+        <a class="header__lang-link header_lang-ru" target="_blank" href="#">Ru</a>
         <a class="header__lang-link" target="_blank" href="#">En</a>
       </div>
     </header>
